--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,11 +26,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
   test-on-wildfly:
     runs-on: ubuntu-latest
     steps:
@@ -42,7 +39,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run Tests on Wildfly
-      run: mvn -B -q clean verify --file pom.xml -Parq-wildfly-managed
+      run: mvn -B -q clean verify -Parq-wildfly-managed
+  
   test-on-glassfish:
     runs-on: ubuntu-latest
     steps:
@@ -54,4 +52,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run Tests on Glassfish
-      run: mvn -B -q clean verify --file pom.xml -Parq-glassfish-managed
+      run: mvn -B -q clean verify -Parq-glassfish-managed
+    - uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: glassfish-server-log
+        path: data/target/glassfish*/glassfish/domains/domain1/logs/server.log  
