--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
         <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
         <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
 
-        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
-        <maven-surefire-report-plugin.version>3.5.3</maven-surefire-report-plugin.version>
+        <maven-surefire-report-plugin.version>3.5.4</maven-surefire-report-plugin.version>
 
         <!-- Cargo maven plugin -->
         <!-- Since 1.10.1, it includes Glassfish 7 support -->
@@ -51,16 +51,16 @@
         <awaitility.version>4.3.0</awaitility.version>
 
         <!-- Glassfish server -->
-        <glassfish.version>8.0.0-M12</glassfish.version>
-        <jersey.version>4.0.0-M2</jersey.version>
-        <eclipselink.version>5.0.0-B10</eclipselink.version>
-        <arquillian-glassfish.version>7.0.13</arquillian-glassfish.version>
+        <glassfish.version>8.0.0-M14</glassfish.version>
+        <jersey.version>4.0.0</jersey.version>
+        <eclipselink.version>5.0.0-B11</eclipselink.version>
+        <arquillian-glassfish.version>7.0.14</arquillian-glassfish.version>
 
         <!-- WildFly -->
-        <wildfly.version>37.0.1.Final</wildfly.version>
+        <wildfly.version>38.0.1.Final</wildfly.version>
         <wildfly-maven-plugin.version>5.1.4.Final</wildfly-maven-plugin.version>
-        <wildfly-arquillian.version>5.1.0.Beta11</wildfly-arquillian.version>
-        <resteasy.version>7.0.0.Beta1</resteasy.version>
+        <wildfly-arquillian.version>5.1.0.Final</wildfly-arquillian.version>
+        <resteasy.version>7.0.1.Final</resteasy.version>
 
         <!-- by default skip tests -->
         <skip.unit.tests>false</skip.unit.tests>
