--- a/.github/workflows/arq-glassfish-managed.yml
+++ b/.github/workflows/arq-glassfish-managed.yml
@@ -1,4 +1,4 @@
-name: Integration Tests with GlassFish
+name: arq-glassfish-managed
 
 on:
   push:
@@ -14,9 +14,9 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
+        java-version: "21"
+        distribution: "temurin"
+        cache: "maven"
     - name: Run Tests on Glassfish
       run: mvn -B -q clean verify -Parq-glassfish-managed
     - uses: actions/upload-artifact@v4
