--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
+        java-version: "21"
+        distribution: "temurin"
+        cache: "maven"
     - name: Build with Maven
       run: mvn -B package
